--- a/biblioteca_digital/libros/templates/libros/lista_libros.html
+++ b/biblioteca_digital/libros/templates/libros/lista_libros.html
@@ -91,6 +91,11 @@
     </script>
 
     <style>
+
+body{
+        font-family: 'Calibri', 'Arial', sans-serif;
+    }
+
         /* Estilos para el modal */
 #modal {
     display: none;
@@ -386,6 +391,7 @@
         padding: 8px;
     }
 }
+
 
 
     </style>
