--- a/biblioteca_digital/libros/templates/libros/proyector.html
+++ b/biblioteca_digital/libros/templates/libros/proyector.html
@@ -66,6 +66,12 @@
     </script>
 
     <style>
+
+body{
+        font-family: 'Calibri', 'Arial', sans-serif;
+    }
+
+
                     /* Estilos para el modal */
 #modal {
     display: none;
