--- a/biblioteca_digital/libros/templates/libros/mapas.html
+++ b/biblioteca_digital/libros/templates/libros/mapas.html
@@ -71,6 +71,12 @@
     </script>
 
     <style>
+
+body{
+        font-family: 'Calibri', 'Arial', sans-serif;
+    }
+
+
               /* Estilos para el modal */
 #modal {
     display: none;
