--- a/biblioteca_digital/libros/templates/libros/multimedia.html
+++ b/biblioteca_digital/libros/templates/libros/multimedia.html
@@ -70,6 +70,12 @@
     </script>
 
     <style>
+
+body{
+        font-family: 'Calibri', 'Arial', sans-serif;
+    }
+
+
                    /* Estilos para el modal */
 #modal {
     display: none;
