--- a/biblioteca_digital/libros/templates/libros/notebook.html
+++ b/biblioteca_digital/libros/templates/libros/notebook.html
@@ -70,6 +70,11 @@
     </script>
 
     <style>
+
+body{
+        font-family: 'Calibri', 'Arial', sans-serif;
+    }
+
                       /* Estilos para el modal */
 #modal {
     display: none;
